[gd_scene load_steps=17 format=2]

[ext_resource path="res://kart/Kart.tscn" type="PackedScene" id=1]
[ext_resource path="res://music/Buster_Prototype_Fluidvolt.ogg" type="AudioStream" id=2]
[ext_resource path="res://materials/DarkGreen.material" type="Material" id=3]
[ext_resource path="res://world/GridSet.meshlib" type="MeshLibrary" id=4]
[ext_resource path="res://default_env.tres" type="Environment" id=5]
[ext_resource path="res://world/World.gd" type="Script" id=6]
[ext_resource path="res://world/bonus.wav" type="AudioStream" id=7]
[ext_resource path="res://world/explosion.wav" type="AudioStream" id=8]
[ext_resource path="res://world/dither.shader" type="Shader" id=9]
[ext_resource path="res://world/CoolPanel.material" type="Material" id=10]

[sub_resource type="PhysicsMaterial" id=1]
absorbent = true

[sub_resource type="CubeMesh" id=2]
material = ExtResource( 3 )
size = Vector3( 200, 0, 100 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 100, 1, 100 )

[sub_resource type="Animation" id=5]
resource_name = "disappear"
length = 4.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 5, 1 ),
"update": 0,
"values": [ Color( 0.372549, 0.694118, 0.603922, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 9 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 3, 1, 1 )

[node name="World" type="WorldEnvironment"]
environment = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Kart" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 5 )
physics_material_override = SubResource( 1 )

[node name="CameraPosition" type="Position3D" parent="Kart"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.5, 2 )

[node name="StartCamera" type="Camera" parent="Kart"]
transform = Transform( -0.866026, 0, -0.5, 0, 1, 0, 0.5, 0, -0.866026, -0.5, 0.8, -1.2 )
current = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -12.0
pitch_scale = 0.8
autoplay = true
bus = "Music"

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 4 )
cell_size = Vector3( 1, 1, 1 )
data = {
"cells": PoolIntArray( 18, 0, 1, 19, 0, 1, 65528, 0, 1, 65554, 0, -1073741823, 131064, 0, 1073741825, 6, 1, 1, 7, 1, 1, 8, 1, -536870911, 9, 1, -536870911, 10, 1, -536870911, 11, 1, -536870911, 19, 1, -536870911, 20, 1, -536870911, 21, 1, -536870911, 22, 1, -536870911, 65528, 1, -536870911, 65542, 1, -536870911, 65543, 1, -536870911, 65544, 1, -536870911, 65545, 1, -536870911, 65546, 1, -536870911, 65547, 1, -536870911, 65555, 1, -536870911, 131064, 1, -536870911, 131078, 1, -536870911, 2, 2, -536870912, 3, 2, -536870912, 4, 2, -536870912, 5, 2, -536870911, 6, 2, -536870911, 7, 2, -536870911, 8, 2, -536870911, 9, 2, -536870911, 10, 2, -536870911, 11, 2, -536870911, 12, 2, -536870911, 13, 2, -536870911, 20, 2, -536870911, 21, 2, -536870911, 22, 2, -536870911, 23, 2, -536870911, 24, 2, -536870911, 25, 2, -536870911, 26, 2, -536870911, 27, 2, -536870911, 28, 2, -536870911, 29, 2, -536870911, 30, 2, -536870911, 31, 2, -536870911, 65528, 2, -536870911, 65541, 2, -536870911, 65547, 2, -536870911, 65548, 2, -536870911, 65549, 2, -536870911, 65555, 2, -536870911, 65556, 2, -536870911, 65557, 2, -536870911, 65563, 2, -536870911, 65564, 2, -536870911, 65565, 2, -536870911, 65566, 2, -536870911, 131064, 2, -536870911, 131077, 2, -536870911, 1, 3, -536870912, 2, 3, -536870912, 4, 3, -536870912, 5, 3, -536870911, 6, 3, -536870911, 7, 3, -536870911, 8, 3, -536870911, 9, 3, -536870911, 10, 3, -536870911, 13, 3, -536870911, 14, 3, -536870911, 21, 3, 1, 22, 3, 1, 23, 3, 1, 24, 3, 1, 25, 3, 1, 26, 3, 1, 27, 3, 1, 28, 3, 0, 29, 3, 0, 30, 3, 0, 31, 3, 536870913, 32, 3, 1, 65528, 3, 1, 65541, 3, 1073741825, 65549, 3, 1, 65550, 3, 1, 65556, 3, 1, 65557, 3, 1073741825, 65562, 3, 1, 65563, 3, 1, 65567, 3, 1, 65568, 3, 1, 131064, 3, 1, 131077, 3, 536870913, 1, 4, 1, 2, 4, 1, 3, 4, 1, 4, 4, 1, 5, 4, 1, 6, 4, 1, 7, 4, 1, 8, 4, 1, 14, 4, 1, 22, 4, 1, 23, 4, 1, 24, 4, 1, 25, 4, 536870913, 26, 4, 1, 29, 4, 536870912, 30, 4, 0, 31, 4, 0, 32, 4, 1, 33, 4, 1, 65528, 4, 1, 65537, 4, 1, 65538, 4, 1, 65539, 4, 1, 65540, 4, 1, 65541, 4, 1, 65550, 4, 1, 65557, 4, 1, 65558, 4, 1, 65559, 4, 1, 65560, 4, 1, 65561, 4, 536870913, 65562, 4, 1, 65568, 4, 1, 65569, 4, 1, 131064, 4, 1, 131077, 4, 1, 0, 5, 1, 1, 5, 1, 2, 5, 1, 3, 5, 1, 4, 5, 1073741825, 5, 5, -2147483647, 6, 5, 1, 7, 5, 1, 8, 5, 0, 29, 5, 0, 30, 5, 0, 33, 5, 1, 34, 5, 1, 65528, 5, 1, 65534, 5, 1, 65535, 5, -1073741823, 65536, 5, 536870913, 65537, 5, -536870911, 65538, 5, 0, 65539, 5, 536870912, 65540, 5, -536870912, 65541, 5, 1073741824, 65569, 5, 1610612737, 131064, 5, -1073741823, 131070, 5, -1073741823, 131071, 5, 1, 196600, 5, 536870913, 196606, 5, 1610612737, 262135, 5, 1073741825, 262136, 5, 1, 262137, 5, 536870913, 262138, 5, 536870913, 262139, 5, -1073741823, 262140, 5, 1610612737, 262141, 5, 1073741825, 262142, 5, -1073741823, 262143, 5, 1073741825, 0, 6, 1610612737, 1, 6, -536870911, 2, 6, 1073741825, 3, 6, -1610612735, 4, 6, -536870911, 5, 6, 536870913, 6, 6, 1073741825, 7, 6, 1073741824, 8, 6, 0, 34, 6, -2147483647, 35, 6, 1, 65528, 6, 1610612737, 65534, 6, 0, 65535, 6, 536870912, 65536, 6, 1610612737, 65537, 6, -2147483648, 65538, 6, 1610612736, 65539, 6, 0, 65570, 6, 536870913, 65571, 6, 536870913, 131064, 6, -1610612735, 0, 7, -536870911, 1, 7, -2147483647, 2, 7, 1, 3, 7, 1073741825, 4, 7, 1610612737, 5, 7, -2147483647, 6, 7, 1073741825, 7, 7, 1073741824, 14, 7, 1, 35, 7, 1610612737, 65534, 7, -1610612736, 65535, 7, 1610612737, 65537, 7, -536870912, 65539, 7, 0, 65541, 7, 0, 65550, 7, 1073741825, 65571, 7, -1610612735, 131064, 7, 1, 131071, 7, -536870911, 0, 8, 536870913, 1, 8, -1610612735, 2, 8, -536870911, 3, 8, -1610612735, 4, 8, 1610612737, 5, 8, -1073741823, 6, 8, 1610612737, 14, 8, 1, 21, 8, -2147483647, 36, 8, -1073741823, 65528, 8, 1610612737, 65535, 8, 1, 65536, 8, 1073741824, 65537, 8, -2147483648, 65538, 8, 1073741824, 65539, 8, 536870912, 65541, 8, 536870912, 65550, 8, -2147483647, 65572, 8, -1610612735, 131071, 8, -1073741823, 0, 9, 1610612737, 1, 9, -1610612735, 2, 9, 1, 3, 9, 536870913, 4, 9, 1, 5, 9, 1610612737, 14, 9, -1610612735, 21, 9, 536870913, 22, 9, 536870912, 36, 9, 536870913, 37, 9, -536870911, 65527, 9, 1, 65528, 9, -2147483647, 65535, 9, 1073741825, 65536, 9, -1610612736, 65538, 9, 1610612736, 65540, 9, 536870912, 65550, 9, 536870913, 65572, 9, 1073741825, 65573, 9, 1, 131071, 9, 536870913, 0, 10, 1, 1, 10, 536870913, 2, 10, -2147483647, 3, 10, 1073741825, 4, 10, 1, 13, 10, 1610612737, 14, 10, -536870911, 21, 10, 1, 22, 10, -536870912, 37, 10, -536870911, 65526, 10, -2147483647, 65527, 10, 536870913, 65535, 10, 1610612737, 65536, 10, 1073741824, 65547, 10, 1610612737, 65548, 10, 1073741825, 65549, 10, -2147483647, 65550, 10, 536870913, 65573, 10, -1073741823, 131071, 10, -536870911, 131083, 10, -2147483648, 0, 11, -1073741823, 1, 11, 1073741825, 2, 11, 536870913, 3, 11, -1073741823, 4, 11, -1073741823, 5, 11, 1073741824, 13, 11, -2147483647, 21, 11, -2147483647, 22, 11, 0, 30, 11, -536870912, 37, 11, 536870913, 38, 11, 1, 65525, 11, -2147483647, 65526, 11, 1, 65534, 11, 0, 65535, 11, 1, 65546, 11, 1, 65547, 11, 1, 65548, 11, -1610612735, 65549, 11, 1610612737, 65550, 11, 1, 65558, 11, 1073741825, 65574, 11, -536870911, 131071, 11, 1073741825, 131082, 11, 0, 131083, 11, 0, 131084, 11, 1, 131085, 11, 1, 131093, 11, 1, 196621, 11, 1, 196622, 11, 1, 196623, 11, 1, 196624, 11, -536870911, 196625, 11, 1, 196626, 11, -536870911, 196627, 11, 1, 196628, 11, 1, 0, 12, -536870911, 1, 12, 1073741825, 2, 12, 536870913, 3, 12, 1, 5, 12, 0, 12, 12, 1, 13, 12, 1, 21, 12, 1, 22, 12, 1, 23, 12, 1, 29, 12, 536870912, 30, 12, 0, 31, 12, 0, 36, 12, 1073741824, 37, 12, -1073741823, 38, 12, 1, 65525, 12, 1, 65526, 12, 1, 65534, 12, 1, 65535, 12, -536870911, 65546, 12, 1073741825, 65547, 12, 1, 65548, 12, 1, 65549, 12, 1, 65558, 12, 1, 65559, 12, 1, 65574, 12, -536870911, 131070, 12, 1, 131082, 12, 0, 131083, 12, 0, 131084, 12, 1, 131093, 12, 1, 196620, 12, 0, 196621, 12, 1, 196622, 12, 1, 196623, 12, -1610612735, 196624, 12, 1, 196625, 12, 1, 196626, 12, 1, 196627, 12, 1073741825, 196628, 12, 1, 0, 13, 1, 1, 13, 1073741825, 12, 13, 1, 21, 13, 536870913, 22, 13, 1610612737, 23, 13, 1, 29, 13, 0, 30, 13, 1, 31, 13, 1, 32, 13, 536870913, 36, 13, 0, 37, 13, 1, 38, 13, 1, 65525, 13, 536870913, 65534, 13, 536870913, 65535, 13, 1, 65546, 13, 1, 65547, 13, 1, 65548, 13, 1, 65549, 13, 1, 65557, 13, -1610612735, 65558, 13, 1, 65559, 13, 1, 65573, 13, 1, 65574, 13, 1, 131070, 13, 536870913, 131082, 13, 0, 131084, 13, 1, 131093, 13, 1, 196620, 13, 0, 196621, 13, 1, 196622, 13, 1, 196623, 13, 1, 196624, 13, 1, 196625, 13, 1, 196626, 13, 536870913, 196627, 13, 1, 196628, 13, 1, 262161, 13, 1, 327697, 13, 1, 393233, 13, 1, 458769, 13, 1, 458770, 13, 1, 458771, 13, 1, 524305, 13, 1, 524306, 13, 1, 524307, 13, 1, 524308, 13, 1, 589841, 13, 1, 589842, 13, 536870913, 589843, 13, 536870913, 589844, 13, 536870913, 589845, 13, 1, 655377, 13, 1, 12, 14, 1, 21, 14, 1, 22, 14, 1, 23, 14, 1, 29, 14, 1, 30, 14, 1, 31, 14, 1, 32, 14, 1, 36, 14, 0, 37, 14, 1, 38, 14, 1, 65524, 14, 1, 65525, 14, 1, 65534, 14, 1, 65546, 14, 1, 65547, 14, 1, 65548, 14, 1, 65557, 14, 1, 65558, 14, 1, 65559, 14, 1, 65574, 14, 1, 131070, 14, 1, 131084, 14, 1, 131093, 14, 536870913, 196620, 14, 1073741824, 196621, 14, 1, 196622, 14, 1, 196623, 14, 1, 196624, 14, 536870913, 196625, 14, 1073741825, 196626, 14, 1, 196627, 14, 1, 196628, 14, 1, 11, 15, 1, 12, 15, 1, 19, 15, 1, 20, 15, 1, 21, 15, 1, 22, 15, 1, 23, 15, 1, 29, 15, 1, 30, 15, 1, 31, 15, 1, 32, 15, 1, 37, 15, 1, 38, 15, -1610612735, 65523, 15, -1610612735, 65524, 15, 1, 65533, 15, 1, 65534, 15, -1610612735, 65546, 15, 536870913, 65547, 15, 1, 65548, 15, 1, 65556, 15, 1, 65557, 15, 1, 65558, 15, -1610612735, 65559, 15, 1, 65573, 15, 1, 65574, 15, 1, 131069, 15, 536870913, 131070, 15, 1, 131084, 15, 1, 131093, 15, 536870913, 196621, 15, 1, 196622, 15, 1, 196623, 15, 1, 196624, 15, 1, 196625, 15, 1, 196626, 15, 1, 196627, 15, 1, 196628, 15, 1, 10, 16, 1, 11, 16, 536870913, 19, 16, 1, 20, 16, 1, 21, 16, 1, 22, 16, 536870913, 23, 16, -1610612735, 29, 16, 1, 30, 16, 1, 31, 16, 1, 32, 16, 1, 36, 16, 0, 37, 16, 1, 38, 16, 1, 65522, 16, 536870913, 65523, 16, 1, 65524, 16, -1610612735, 65533, 16, 1, 65546, 16, 1, 65547, 16, 1, 65555, 16, 1, 65556, 16, 1, 65557, 16, 1, 65558, 16, 0, 65559, 16, 1, 65573, 16, 1, 65574, 16, 1, 131059, 16, 1, 131060, 16, 536870913, 131069, 16, 1, 131083, 16, 1, 131084, 16, 1, 196621, 16, 1, 10, 17, 1073741825, 11, 17, 1, 19, 17, 1, 20, 17, 1, 21, 17, 1, 22, 17, 536870913, 23, 17, 1, 30, 17, -1610612735, 31, 17, 1, 32, 17, 1, 36, 17, 0, 37, 17, 1, 65521, 17, 536870913, 65522, 17, 1, 65523, 17, 536870913, 65532, 17, 1, 65533, 17, 1, 65547, 17, 1, 65555, 17, 536870913, 65556, 17, 1, 65557, 17, 1, 65558, 17, 0, 65559, 17, 1, 65573, 17, 1, 131058, 17, 1, 131059, 17, 1, 131068, 17, 1, 131069, 17, 536870913, 10, 18, 1, 11, 18, 1, 18, 18, 1, 19, 18, 1, 20, 18, 1, 21, 18, 1, 22, 18, 1, 23, 18, 1, 36, 18, 0, 37, 18, 536870913, 65520, 18, 1, 65521, 18, 1, 65523, 18, 0, 65532, 18, 1, 65533, 18, 1, 65547, 18, 1, 65555, 18, 1, 65556, 18, 1, 65558, 18, -1610612736, 65559, 18, 1, 65573, 18, 1, 131057, 18, 1, 131068, 18, 1, 131083, 18, 1, 10, 19, 1, 11, 19, 536870913, 18, 19, 1, 19, 19, 1, 20, 19, 1, 21, 19, 1, 22, 19, 1, 23, 19, 536870913, 36, 19, 0, 37, 19, 1, 65520, 19, 1, 65521, 19, 0, 65522, 19, 0, 65531, 19, 0, 65532, 19, 1, 65533, 19, 1, 65547, 19, 1, 65559, 19, 1, 65573, 19, 1, 131056, 19, 1, 131068, 19, 536870913, 131083, 19, 1, 10, 20, 1, 11, 20, 1, 18, 20, 1, 19, 20, 1, 20, 20, 1, 21, 20, 1, 22, 20, 1, 23, 20, 1, 24, 20, 536870913, 36, 20, 0, 37, 20, 1, 65519, 20, 1073741825, 65520, 20, 1, 65521, 20, 0, 65530, 20, 0, 65531, 20, 0, 65532, 20, 1, 65547, 20, 1, 65554, 20, 1, 65559, 20, 1, 65560, 20, 1, 65573, 20, 1, 131055, 20, 1, 131056, 20, 1, 131068, 20, 1, 131083, 20, 1, 10, 21, -1610612735, 11, 21, 536870913, 18, 21, 1, 19, 21, 1, 20, 21, 1, 21, 21, 1, 22, 21, -1610612735, 23, 21, 1, 24, 21, 1, 37, 21, 1, 65519, 21, 1, 65530, 21, 0, 65531, 21, -1610612735, 65532, 21, -1073741823, 65547, 21, 1, 65560, 21, 1, 65573, 21, 1, 131055, 21, 1, 131067, 21, 1, 131068, 21, 1, 131083, 21, 1, 10, 22, 1, 11, 22, 1, 17, 22, 1, 18, 22, 1, 19, 22, 1, 20, 22, 1, 21, 22, 1, 22, 22, 536870913, 23, 22, 1, 24, 22, 1, 36, 22, 1, 37, 22, 1, 65518, 22, 1, 65519, 22, 1, 65530, 22, 1, 65531, 22, 1, 65547, 22, 1, 65559, 22, 1, 65560, 22, 1, 65572, 22, -536870911, 65573, 22, 1, 131054, 22, 1, 131055, 22, 1, 131066, 22, 1, 131067, 22, 1, 131083, 22, 1, 10, 23, 1, 11, 23, 1, 17, 23, 1, 18, 23, 1, 22, 23, 1, 23, 23, 1, 24, 23, 1, 36, 23, 1, 65518, 23, 1, 65529, 23, 1, 65530, 23, 1, 65531, 23, 1, 65547, 23, 1, 65559, 23, 1, 65560, 23, 1, 65572, 23, 1, 131054, 23, 1, 131065, 23, 536870913, 131083, 23, 1073741825, 10, 24, 1, 16, 24, 536870913, 17, 24, 1, 18, 24, 536870913, 23, 24, 1, 24, 24, 1, 25, 24, 1, 33, 24, 0, 34, 24, 0, 35, 24, 1, 36, 24, -1610612735, 65517, 24, 1, 65518, 24, 1, 65520, 24, 536870912, 65528, 24, 1, 65529, 24, 1, 65530, 24, 536870913, 65546, 24, 1, 65552, 24, 536870913, 65560, 24, 1, 65561, 24, 536870913, 65571, 24, 1, 131053, 24, 1, 131054, 24, 1, 131064, 24, 1, 131065, 24, 1, 9, 25, 1, 10, 25, 0, 16, 25, 1, 17, 25, 536870913, 25, 25, 1, 26, 25, 1, 29, 25, 1073741825, 30, 25, 1, 31, 25, 1, 32, 25, 0, 33, 25, 536870912, 35, 25, 1, 65517, 25, 1, 65518, 25, 1, 65519, 25, 0, 65520, 25, 0, 65528, 25, 1, 65529, 25, 1, 65530, 25, 1, 65545, 25, 1, 65552, 25, 1, 65561, 25, 1, 65562, 25, 1, 65565, 25, 536870912, 65566, 25, 536870912, 65571, 25, 1, 131053, 25, 1, 131064, 25, 1, 131081, 25, 0, 7, 26, 1, 8, 26, 1, 9, 26, 536870913, 16, 26, 1, 26, 26, 1, 27, 26, 1073741825, 28, 26, 1, 29, 26, 1, 30, 26, 1, 31, 26, 1, 32, 26, 1, 33, 26, 1, 34, 26, 1, 65517, 26, 1, 65518, 26, 1, 65519, 26, 0, 65520, 26, 0, 65528, 26, 1, 65529, 26, 1, 65530, 26, 1, 65531, 26, 1, 65543, 26, 1, 65544, 26, 1, 65545, 26, 1, 65552, 26, 1, 65562, 26, 1, 65564, 26, 0, 65565, 26, 0, 65566, 26, 0, 65567, 26, 0, 65570, 26, 1, 131053, 26, 1, 131054, 26, 536870913, 131064, 26, 536870913, 131079, 26, 0, 131081, 26, 0, 5, 27, 1, 6, 27, 1, 7, 27, 1, 8, 27, 1, 16, 27, 1, 26, 27, 536870913, 27, 27, 1, 28, 27, 536870913, 29, 27, 1, 30, 27, 1, 31, 27, 536870913, 32, 27, 1, 33, 27, 1, 65518, 27, 1, 65520, 27, 0, 65528, 27, 1, 65529, 27, 1, 65530, 27, 1, 65531, 27, 1, 65536, 27, 1, 65541, 27, 1, 65542, 27, 1, 65543, 27, 1, 65552, 27, -536870911, 65562, 27, 1, 65563, 27, 1, 65564, 27, 1, 65567, 27, 1, 65568, 27, 1, 65569, 27, 1, 131054, 27, 1, 131064, 27, 1, 131065, 27, 1, 131071, 27, 1, 131077, 27, -536870912, 131078, 27, 0, 131079, 27, 0, 196601, 27, 0, 3, 28, 1, 4, 28, 1, 5, 28, 536870913, 16, 28, 1, 28, 28, 1, 29, 28, 536870913, 30, 28, 1, 31, 28, -536870911, 32, 28, 1, 65518, 28, 1, 65530, 28, 536870913, 65531, 28, 1, 65536, 28, 1, 65537, 28, 1, 65539, 28, 1, 65540, 28, 1, 65552, 28, 1, 65565, 28, 1, 65566, 28, 536870913, 131054, 28, 1, 131066, 28, 1, 131067, 28, 1, 131068, 28, 1, 131069, 28, 1, 131070, 28, 1, 131071, 28, 1, 196602, 28, 0, 196603, 28, 0, 196604, 28, 1, 196605, 28, 1, 196606, 28, 1, 262141, 28, 0, 262142, 28, 0, 0, 29, 536870913, 1, 29, 1, 2, 29, 1, 3, 29, 1, 15, 29, 0, 16, 29, 1, 65518, 29, 1, 65531, 29, 1, 65532, 29, 1, 65533, 29, 1, 65534, 29, 1, 65535, 29, 1, 65536, 29, 1, 65537, 29, 1, 65538, 29, 1, 65552, 29, 1, 131054, 29, 536870913, 131067, 29, 1, 131068, 29, 1, 131069, 29, 1, 131070, 29, 1, 131071, 29, 536870913, 131072, 29, 1, 196590, 29, 1, 196605, 29, 1, 196606, 29, 1, 196607, 29, 1, 262142, 29, 0, 262143, 29, 0, 15, 30, 0, 16, 30, 1, 65518, 30, 1, 65552, 30, 1, 131054, 30, 1, 196590, 30, 1, 196591, 30, 1, 15, 31, 1, 16, 31, 536870913, 65519, 31, 1, 65552, 31, 1, 131055, 31, 1, 196591, 31, 1, 196592, 31, 1, 14, 32, 0, 15, 32, 1, 65520, 32, 1, 65551, 32, -536870911, 65552, 32, 1, 131056, 32, 1, 196591, 32, 1, 196592, 32, 1, 14, 33, 536870913, 15, 33, 1, 65521, 33, 1, 65550, 33, 1, 131057, 33, 536870913, 196592, 33, 1, 196593, 33, 1, 7, 34, 0, 8, 34, -536870912, 9, 34, 0, 11, 34, 0, 12, 34, 0, 13, 34, 1, 14, 34, 1, 65522, 34, 1, 65548, 34, 1, 65549, 34, 1, 131058, 34, 1, 196593, 34, 1, 196594, 34, 1, 3, 35, 0, 4, 35, 0, 5, 35, 0, 6, 35, 0, 7, 35, -536870912, 8, 35, 0, 10, 35, 0, 11, 35, 1, 12, 35, 1, 13, 35, 1, 65523, 35, 1, 65546, 35, 1, 65547, 35, 1, 65548, 35, 1, 131059, 35, 1, 196595, 35, 1, 1, 36, 0, 2, 36, 0, 3, 36, 0, 4, 36, 0, 6, 36, 0, 7, 36, 0, 8, 36, 1, 9, 36, 1, 10, 36, 1, 11, 36, 1, 65524, 36, 1, 65543, 36, 1, 65544, 36, 1, 65545, 36, 1, 65546, 36, -536870911, 65547, 36, 1, 131060, 36, 1, 0, 37, 1, 1, 37, 1, 2, 37, 1, 3, 37, 1, 4, 37, 1, 5, 37, 1, 6, 37, 536870913, 7, 37, 536870913, 8, 37, 1, 65525, 37, 1, 65526, 37, 1, 65527, 37, 1, 65528, 37, 1, 65529, 37, 1, 65530, 37, 536870913, 65531, 37, 1, 65532, 37, 1, 65533, 37, 1, 65534, 37, 1, 65535, 37, 1, 65536, 37, 1, 65537, 37, 1, 65538, 37, 1, 65539, 37, 1, 65540, 37, 1, 65541, 37, 1, 65542, 37, 1, 65543, 37, 1073741825, 131061, 37, 1, 131062, 37, 1, 131063, 37, 1, 131068, 37, 1, 131069, 37, 1, 131070, 37, 1, 131071, 37, 1, 0, 38, 1, 1, 38, 1, 65533, 38, 1, 65534, 38, 1, 65535, 38, 1, 131069, 38, 1, 131070, 38, 1, 130781, 65114, 0, 130801, 65143, 536870912, 130873, 65248, 0, 0, 65530, 1, 1, 65530, 1, 2, 65530, 1, 3, 65530, 1, 4, 65530, 1, 5, 65530, 1, 6, 65530, 1, 7, 65530, 1, 8, 65530, 1, 9, 65530, 1, 10, 65530, 1, 11, 65530, 1, 12, 65530, 1, 13, 65530, 1, 65532, 65530, 1, 65533, 65530, 1, 65534, 65530, 1, 65535, 65530, 1, 65536, 65530, 1, 65537, 65530, 1, 65538, 65530, 1, 65539, 65530, 1, 65540, 65530, 1, 65541, 65530, 1, 65542, 65530, 1, 65543, 65530, 1, 65544, 65530, 1, 65545, 65530, 1, 65546, 65530, 1, 65547, 65530, 1, 65548, 65530, 1, 65549, 65530, 1, 131068, 65530, 1, 131069, 65530, 1, 131070, 65530, 1, 131071, 65530, 1, 0, 65531, 0, 12, 65531, 1, 13, 65531, 1, 14, 65531, 1, 15, 65531, 1, 65531, 65531, 1, 65532, 65531, 1, 65533, 65531, 0, 65534, 65531, 0, 65535, 65531, 0, 65549, 65531, 1, 65550, 65531, 1, 65551, 65531, 1, 131067, 65531, 1, 131068, 65531, 1, 14, 65532, 1, 15, 65532, 1, 16, 65532, 1, 65530, 65532, 1, 65531, 65532, 1, 65532, 65532, 0, 65533, 65532, 0, 65534, 65532, 0, 65550, 65532, 1, 65551, 65532, -536870911, 65552, 65532, 1, 131066, 65532, 536870913, 131067, 65532, 1, 15, 65533, 1, 16, 65533, 1, 17, 65533, 1, 65529, 65533, 1, 65530, 65533, 1, 65551, 65533, 1, 65552, 65533, 1, 65553, 65533, 1, 131065, 65533, 1, 131066, 65533, 1, 17, 65534, 1, 65528, 65534, 1, 65529, 65534, 1, 65553, 65534, 1, 131064, 65534, 1, 131065, 65534, 1, 17, 65535, 1, 18, 65535, 1, 65528, 65535, 1, 65553, 65535, 1, 65554, 65535, 1, 131064, 65535, 1 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( -20, 1, 30 )
}

[node name="Floor" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 3 )

[node name="Camera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, -4, 2, 12 )
fov = 90.0
near = 0.5
far = 50.0
target = NodePath("../Kart/CameraPosition")
speed = 10.0
enabled = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TopHud" type="ColorRect" parent="HUD"]
material = ExtResource( 10 )
anchor_right = 1.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
color = Color( 0.372549, 0.694118, 0.603922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/TopHud"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "G O R D O N K A R T        Appuyer sur Entrée pour commencer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Disappear" type="AnimationPlayer" parent="HUD/TopHud"]
anims/disappear = SubResource( 5 )

[node name="Dither" type="ColorRect" parent="HUD"]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomHud" type="ColorRect" parent="HUD"]
material = ExtResource( 10 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
rect_min_size = Vector2( 0, 24 )
color = Color( 0.372549, 0.694118, 0.603922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="HBoxContainer" parent="HUD/BottomHud"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current" type="Label" parent="HUD/BottomHud/Scores"]
margin_top = 5.0
margin_right = 762.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Paul Blanloeil"

[node name="Best" type="Label" parent="HUD/BottomHud/Scores"]
margin_left = 766.0
margin_top = 5.0
margin_right = 1004.0
margin_bottom = 19.0
text = "Musique: Buster Prototype (Fluidvolt)"

[node name="FinishLine" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 5 )
collision_layer = 0
collision_mask = 2

[node name="Explosion" type="AudioStreamPlayer" parent="FinishLine"]
stream = ExtResource( 8 )
volume_db = -6.0

[node name="CollisionShape" type="CollisionShape" parent="FinishLine"]
shape = SubResource( 6 )

[node name="Midway" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, 19 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Midway"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 5 )
shape = SubResource( 6 )

[node name="EndTurn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -6.0
[connection signal="body_entered" from="FinishLine" to="." method="_on_FinishLine_body_entered"]
[connection signal="body_exited" from="FinishLine" to="." method="_on_FinishLine_body_exited"]
[connection signal="body_entered" from="Midway" to="." method="_on_Midway_body_entered"]
